[tool.poetry]
name = "lissajou"
version = "0.1.1"
description = "A Python module for creating animations, including Lissajou curve simulations."
authors = ["Hermann Agossou"]
keywords = ["animation", "matplotlib", "simulation", "Lissajou", "parametric", "visualization"]
license = "MIT"
readme = "README.md"
maintainers = [
    "Hermann Agossou <agossouhermann7@gmail.com>"
]
license = "MIT"
homepage = "https://hermann-web.github.io/blog/projects/introducing-lissajou-for-animated-plots/"
repository = "https://github.com/Hermann-web/lissajou"
documentation = "https://github.com/Hermann-web/lissajou/blob/main/docs/index.md"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "License :: OSI Approved :: MIT License",
]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.26.4"
matplotlib = "^3.8.3"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
isort = "^5.13.2"

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.flake8]
ignore = "E501"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
